--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
     <img src="./assets/images/birthday_preview.jpg" height="200"/>
-    <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
+    <hr />
+    <a href="./public/about.html">About Me</a> 
+    <a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
